# djangogirls417AZ

./: Dockerfile  README.md  pyproject.toml  startup.sh
config/: settings.py  urls.py
